--- a/package.json
+++ b/package.json
@@ -13,16 +13,14 @@
     "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.6",
-    "@react-navigation/material-bottom-tabs": "^6.2.17",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
-    "@types/react": "~18.2.14",
-    "bootstrap": "^5.3.2",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.16",
     "@react-navigation/stack": "^6.3.20",
+    "@types/react": "~18.2.14",
+    "bootstrap": "^5.3.2",
     "expo": "~49.0.13",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,7 +34,7 @@
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3",
-    "expo-location": "~16.1.0"
+    "expo-camera": "~13.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
